crates/strider-analyze/tests/snapshots/v2__arm_thumb__complex__dispatch_on_flag.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "11" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v12" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "14" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v15" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v15" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x594:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "8" -> "17" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "20" -> "17" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "13" -> "17" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "16" -> "17" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "21" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "17" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v22" [color="#888888", style=dashed];
  "v22" -> "21" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v23" [color="#888888", style=dashed];
  "v23" -> "21" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v24" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v24" [color="#888888", style=dashed];
  "v24" -> "21" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v25" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v25" [color="#888888", style=dashed];
  "v25" -> "21" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "20" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0xc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "19" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "20" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
